# bitbucket-rs

./: .gitignore  Cargo.toml  README.md  TODO
src/: auth.rs  client.rs  lib.rs  models.rs  traits.rs
src/models/: get.rs  link.rs  mod.rs  paged_response.rs  post.rs  project.rs
src/resources/: branch.rs  commit.rs  mod.rs  project.rs  pull_request.rs  repository.rs  util.rs
src/uri_builders/: admin.rs  branch.rs  browse.rs  commit.rs  diff.rs  file.rs  log.rs  mod.rs  path.rs  permission.rs  project.rs  pull_request.rs  repository.rs  resource.rs  user.rs
tests/: common.rs  lib.rs
tests/resource_tests/: mod.rs  project.rs  pull_request.rs  repository.rs
