[package]
authors = ["George Liontos <sdi1600094@di.uoa.gr>"]
edition = "2018"
name = "bitbucket-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
derive_builder = "0.9.0"
reqwest = {version = "0.11.0", features = ["json"]}
serde = {version = "1.0.118", features = ["derive"]}
anyhow = "1.0.38"