[package]
authors = ["George Liontos <sdi1600094@di.uoa.gr>"]
edition = "2018"
name = "bitbucket-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
bytes = "1.0.1"
derive_builder = "0.9.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
function_name = "0.2.0"
heck = "0.3.2"

[dev-dependencies]
httpmock = "0.5.5"
serde_json = "1.0.62"
