[package]
authors = ["George Liontos <sdi1600094@di.uoa.gr>"]
edition = "2018"
name = "bitbucket-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
bytes = "1.1.0"
derive_builder = "0.11.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
heck = "0.4.0"

[dev-dependencies]
httpmock = "0.6.6"
serde_json = "1.0.79"
